@@ -1,14 +1,25 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'application'
+    id 'jacoco'
+    id 'com.adarshr.test-logger' version '4.0.0'
 }
 
 repositories {
     mavenCentral()
-    maven { url 'https://projectlombok.org/edge-releases' }
 }
 
-group = 'org.bvkatwijk'
-version = 'unspecified'
+configurations {
+    testCompile.extendsFrom compileOnly
+}
+
+group '$package$'
+version = '0.1.0'
 
 dependencies {
     implementation project(":lib")
@@ -53,18 +64,18 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-run {
-    jvmArgs = [
-            '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    ]
+test {
+    finalizedBy jacocoTestReport
 }
 
-test {
-    jvmArgs = ['--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED']
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
+testlogger {
+    slowThreshold 500
 }
